--- a/SAO_Asuna_and_Kirito.css
+++ b/SAO_Asuna_and_Kirito.css
@@ -3,7 +3,7 @@
  * @author CreeperFarm
  * @version 1.0.X
  * @description A theme with Asuna and Kirito from SAO (Sword Art Online)
- * @source https://github.com/CreeperFarm
+ * @source https://github.com/CreeperFarm/SAO-Asuna-and-Kirito/blob/main/SAO_Asuna_and_Kirito.css
  */
 
 @import url('https://raw.githack.com/Ruben7173/Ruben7173.github.io/master/BetterDiscord-Themes/Modules/transparency2.css');
