--- a/SAO_Asuna_and_Kirito.css
+++ b/SAO_Asuna_and_Kirito.css
@@ -7,7 +7,7 @@
  */
 
 @import url('https://raw.githack.com/Ruben7173/Ruben7173.github.io/master/BetterDiscord-Themes/Modules/transparency2.css');
-@import url('https://raw.githubusercontent.com/CreeperFarm/SAO-Asuna-and-Kirito/main/core.css');
+@import url('https://rawcdn.githack.com/CreeperFarm/SAO-Asuna-and-Kirito/745cee287ae71e61f880a9cc1b1e441889354340/core.css');
 
 :root{
     --background: url('https://c4.wallpaperflare.com/wallpaper/850/38/560/sword-art-online-asuna-yuuki-kazuto-kirigaya-kirito-sword-art-online-wallpaper-preview.jpg');
